# xmsh

./: .gitattributes  CMakeLists.txt  README.md
include/: client.hpp  server.hpp  xmsh.hpp
src/client/: client.cpp  main.cpp
src/server/: main.cpp  server.cpp
